--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "daisyui": "^3.1.1",
+    "fuse.js": "^6.6.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.259.0",
