--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.259.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
