--- a/admin/package.json
+++ b/admin/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
