--- a/admin/package.json
+++ b/admin/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.26.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
