--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.2",
@@ -22,7 +27,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
-    "react-tooltip": "^5.26.3"
+    "react-tooltip": "^5.26.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
