--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.3.1",
+    "@mui/x-data-grid": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.2",
