--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,8 @@
     "@mui/x-charts": "^7.3.1",
     "@mui/x-data-grid": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.2",
+    "dotenv": "^16.4.5",
+    "html2pdf.js": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
