--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src/**/*", "src/types/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }],
-  "types":["vitest/globals"]
+  "types": ["vitest/globals"]
 }
