--- a/admin/package.json
+++ b/admin/package.json
@@ -19,6 +19,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.1",
     "@mui/x-data-grid": "^7.3.1",
+    "@mui/x-data-grid-generator": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.2",
     "dotenv": "^16.4.5",
     "html2pdf.js": "^0.9.0",
