--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
-    "lint-prettier": "yarn lint:check && yarn prettier:check",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint-prettier": "yarn lint:check && yarn prettier:check"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/http-errors": "^2.0.1",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^13.2.2",
     "morgan": "^1.10.0",
     "prettier": "^2.8.8",
