--- a/client-next/package.json
+++ b/client-next/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky install",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@emotion/cache": "^11.13.1",
@@ -40,6 +41,7 @@
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.5",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
