--- a/client-next/package.json
+++ b/client-next/package.json
@@ -41,6 +41,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "postcss": "^8",
@@ -48,7 +50,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-"lint-staged": {
+  "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
       "eslint --quiet --fix"
     ],
