--- a/client-next/.eslintrc.json
+++ b/client-next/.eslintrc.json
@@ -13,14 +13,7 @@
     "eslint:recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": [
-    "react",
-    "unused-imports",
-    "import",
-    "@typescript-eslint",
-    "jsx-a11y",
-    "prettier"
-  ],
+  "plugins": ["react", "unused-imports", "import", "@typescript-eslint", "jsx-a11y", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
